--- a/src/modules/x/app/app.html
+++ b/src/modules/x/app/app.html
@@ -1,4 +1,14 @@
 <template>
-    <h1>Hello world!</h1>
-    <x-counter label="Counter:"></x-counter>
+	<lightning-layout>
+		<lightning-layout-item size="6">
+			<c-drag-list-container name="available" items={availableItems} onstartmove={handleDragStart}
+				onendmove={handleDragComplete}>
+			</c-drag-list-container>
+		</lightning-layout-item>
+		<lightning-layout-item size="6">
+			<c-drag-list-container name="selected" items={selectedItems} onstartmove={handleDragStart}
+				onendmove={handleDragComplete}>
+			</c-drag-list-container>
+		</lightning-layout-item>
+	</lightning-layout>
 </template>
